--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "popper.js": "^1.16.1",
     "v-movable": "^0.3.2",
     "vue": "^2.6.11",
+    "vue-click-outside": "^1.1.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
