--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "v-movable": "^0.3.2",
     "vue": "^2.6.11",
     "vue-click-outside": "^1.1.0",
+    "vue-context": "^6.0.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
